tests/ui/fail/serialize_secret.stderr
error[E0277]: the trait bound `Password: Serialize` is not satisfied
  --> tests/ui/fail/serialize_secret.rs:11:22
   |
11 |     assert_serialize(password);
   |     ---------------- ^^^^^^^^ the trait `Serialize` is not implemented for `Password`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `assert_serialize`
  --> tests/ui/fail/serialize_secret.rs:14:24
   |
14 | fn assert_serialize<T: serde::Serialize>(_t: T) {}
   |                        ^^^^^^^^^^^^^^^^ required by this bound in `assert_serialize`
